--- a/app/src/main/res/layout/activity_register_operation.xml
+++ b/app/src/main/res/layout/activity_register_operation.xml
@@ -8,8 +8,23 @@
     android:paddingRight="20dp"
     android:paddingLeft="20dp" >
 
+
     <TextView
-        android:paddingTop="50dp"
+
+        android:id="@+id/txtTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:paddingLeft="10dp"
+        android:text="Operation Type"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <TextView
+        android:paddingTop="10dp"
         android:id="@+id/txtNameOperator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,7 +34,7 @@
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textTitle"
+        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
         />
 
     <EditText
