--- a/app/src/main/res/layout/header_list_operation_detail.xml
+++ b/app/src/main/res/layout/header_list_operation_detail.xml
@@ -10,12 +10,14 @@
         android:id="@+id/text_Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Number"
+        android:text="Nº"
         android:textColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/text_Value"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+
         />
 
     <TextView
@@ -25,6 +27,7 @@
         android:layout_marginEnd="40dp"
         android:textColor="@color/white"
         android:text="value"
+        android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@id/text_Number"
         app:layout_constraintRight_toLeftOf="@id/text_dateDue"
         app:layout_constraintTop_toTopOf="parent"
@@ -36,12 +39,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
+        android:textStyle="bold"
         android:text="Due Date"
         app:layout_constraintLeft_toRightOf="@id/text_Value"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-       />
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
