--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="gray">#C4C4C4</color>
+    <color name="grayDark">#808080</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
